force-app/main/default/objects/Convention__c/Convention__c.object-meta.xml
<CustomObject>
    <label>Convention</label>
    <nameField>
        <label>Convention Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conventions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>