force-app/main/default/objects/Convention__c/fields/AdditionalSpeakers__c.field-meta.xml
<CustomField>
    <fullName>AdditionalSpeakers__c</fullName>
    <inlineHelpText>Please mention the name if it is not existing as a contact in the system</inlineHelpText>
    <label>Additional Speaker&apos;s</label>
    <type>TextArea</type>
</CustomField>