force-app/main/default/objects/Convention__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <inlineHelpText>Enter the Comments that are relevantly related to this Convention. Any information that is not entered anywhere else will be entered here.</inlineHelpText>
    <label>Comments</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>