force-app/main/default/objects/Convention__c/fields/Convention_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Convention_Date_and_Time__c</fullName>
    <label>Convention Date and Time</label>
    <type>DateTime</type>
</CustomField>