force-app/main/default/objects/Convention__c/fields/Convention_Year__c.field-meta.xml
<CustomField>
    <fullName>Convention_Year__c</fullName>
    <label>Convention Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>