force-app/main/default/objects/Convention__c/fields/ConventionCity__c.field-meta.xml
<CustomField>
    <fullName>ConventionCity__c</fullName>
    <inlineHelpText>Enter the name of the City where this Convention was held.</inlineHelpText>
    <label>Convention City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>