force-app/main/default/objects/Convention__c/fields/RelatedSpeaker1__c.field-meta.xml
<CustomField>
    <fullName>RelatedSpeaker1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Speaker 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Conventions</relationshipLabel>
    <relationshipName>Conventions</relationshipName>
    <type>Lookup</type>
</CustomField>