force-app/main/default/objects/Convention__c/fields/RelatedSpeaker2__c.field-meta.xml
<CustomField>
    <fullName>RelatedSpeaker2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Speaker 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Conventions (Related Speaker 2)</relationshipLabel>
    <relationshipName>Conventions1</relationshipName>
    <type>Lookup</type>
</CustomField>