force-app/main/default/objects/Convention__c/fields/RelatedSpeaker3__c.field-meta.xml
<CustomField>
    <fullName>RelatedSpeaker3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Speaker 3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Conventions (Related Speaker 3)</relationshipLabel>
    <relationshipName>Conventions2</relationshipName>
    <type>Lookup</type>
</CustomField>